--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@
     box-sizing: border-box;
     font-family: 'Fira Code', monospace;
     color: white;
-    text-wrap: nowrap;
 }
 
 body{
@@ -39,7 +38,7 @@ main, header, article, nav{
     box-shadow: 2px 2px 2px rgba(20, 20, 20, 20%);
 }
 
-header, article, nav{
+header, article{
     margin: 10px;
 }
 
@@ -52,7 +51,7 @@ header, article, nav{
 }
 
 main{
-    width: 100%;
+    width: fit-content;
     animation: mainRollin 1s ease-out;
 }
 
@@ -72,6 +71,7 @@ nav{
     flex-direction: column;
     animation: navRollin 1s ease-out;
     transition-duration: 1s;
+    margin: 10px 10px 0 10px;
 }
 
 nav:hover{
@@ -117,6 +117,13 @@ a:hover{
     }
 }
 
+@media only screen and (max-width: 1200px){
+    a:hover{
+	margin: 0;
+	transform: scale(1.2);
+}
+}
+
 @media only screen and (max-width: 900px){
     body{
         display: block;
@@ -126,4 +133,3 @@ a:hover{
         width: fit-content;
     }
 }
-
